--- a/.gitlab/.gitlab-ci.yml
+++ b/.gitlab/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 stages:
+  - setup
   - test
   - build
 
@@ -17,7 +18,11 @@ before_script:
   - mkdir -p ${ORG_PATH}
   - ln -s $PWD  ${ORG_PATH}/
   - cd ${APP_PATH}
-  - dep ensure --vendor-only
+
+setup:
+  stage: setup
+  script:
+    - dep ensure --vendor-only
 
 lint:
   stage: test
