--- a/.gitlab/Dockerfile
+++ b/.gitlab/Dockerfile
@@ -1,6 +1,7 @@
 FROM golang:1.10
 
 RUN apt-get update -y && apt-get install -y rpm --no-install-recommends && \
+    rm -rf /var/lib/apt/lists/* && \
     go get -u github.com/golang/dep/cmd/dep && \
     go get github.com/schrej/godacov && \
     go get github.com/goreleaser/goreleaser && \
