--- a/.gitlab/Dockerfile
+++ b/.gitlab/Dockerfile
@@ -1,5 +1,7 @@
 FROM golang:1.10
 
+LABEL maintainer="Tom Whiston <tom.whiston@gmail.com>"
+
 RUN apt-get update -y && apt-get install -y rpm --no-install-recommends && \
     rm -rf /var/lib/apt/lists/* && \
     go get -u github.com/golang/dep/cmd/dep && \
