--- a/.gitlab/.gitlab-ci.yml
+++ b/.gitlab/.gitlab-ci.yml
@@ -24,10 +24,11 @@ setup:
   script:
     - dep ensure --vendor-only
 
+# this timeout needs to be crazy high!
 lint:
   stage: test
   script:
-    - gometalinter --vendor --deadline 120s ./...
+    - gometalinter --vendor --deadline 240s ./...
 
 test:
   stage: test
