add systemd file and install it with package

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -2,6 +2,10 @@ version: '2'
 
 tasks:
 
+  build:
+    cmds:
+      - go build -o ./dist/factd
+
   release:
     cmds:
      - goreleaser --snapshot --rm-dist
